--- a/bottleneck/script/configs/task_config.yaml
+++ b/bottleneck/script/configs/task_config.yaml
@@ -34,9 +34,11 @@ Task_specific:
       mlp_activation_hidden: leaky
       mlp_activation_final: leaky
     CliqueRing:
-      batch_size: 1024
+      batch_size: 512
+      accum_grad: 2
       dim: 64
       lr_factor: .7
+      max_epochs: 200
       num_samples: 6000
       train_fraction: 5000
       mlp_layers: 3
@@ -49,6 +51,7 @@ Task_specific:
       num_samples: 6000
       train_fraction: 5000
       mlp_layers: 3
+      max_epochs: 200
       mlp_activation_hidden: leaky
       mlp_activation_final: leaky
     Tree:
@@ -78,7 +81,6 @@ Task_specific:
       use_layer_norm: True
       eval_every: 5
     Actor:
-      batch_size: 1
       dim: 128
       lr_factor: .7
       mlp_layers: 3
@@ -86,13 +88,12 @@ Task_specific:
       dropout_final: .1
       dropout_hidden: .1
       lr: 0.005
-      max_epochs: 50
+      max_epochs: 80
       self_loop_weight: 0.1
       optim_type: AdamW
       use_residual: True
       use_layer_norm: True
     Squi:
-      batch_size: 1
       dim: 128
       lr_factor: .7
       mlp_layers: 0
@@ -106,7 +107,6 @@ Task_specific:
       self_loop_weight: 0.2
       optim_type: AdamW
     Texas:
-      batch_size: 1
       dim: 128
       lr_factor: .7
       mlp_layers: 0
@@ -120,7 +120,6 @@ Task_specific:
       self_loop_weight: 0.1
       optim_type: AdamW
     Corn:
-      batch_size: 1
       dim: 128
       lr_factor: .7
       mlp_layers: 0
@@ -135,7 +134,6 @@ Task_specific:
       use_residual: True
       use_layer_norm: True
     Wisc:
-      batch_size: 1
       dim: 128
       lr_factor: .7
       mlp_layers: 0
@@ -150,7 +148,6 @@ Task_specific:
       use_residual: True
       use_layer_norm: True
     Cham:
-      batch_size: 1
       dim: 128
       lr_factor: .7
       mlp_layers: 0
@@ -164,7 +161,6 @@ Task_specific:
       self_loop_weight: 0.1
       optim_type: AdamW
     Cite:
-      batch_size: 1
       dim: 128
       lr_factor: .5
       mlp_layers: 0
@@ -178,7 +174,6 @@ Task_specific:
       self_loop_weight: 0.1
       optim_type: Adam
     Pubm:
-      batch_size: 1
       dim: 128
       lr_factor: .7
       mlp_layers: 0
