--- a/bottleneck/script/configs/task_config.yaml
+++ b/bottleneck/script/configs/task_config.yaml
@@ -1,50 +1,28 @@
-General:
-  use_residual: False
-  use_layer_norm: False
+Common:
+  use_residual: True
+  use_layer_norm: True
   loader_workers: 2
-  mlp_layers: 0
+  dim: 64
   eval_every: 5
   wd: 0.0
-  self_loop_weight: 0.1
-  num_train_samples: 32000
-  num_test_samples: 1000
   lr: 0.001
-  train_fraction: 0.8
-  dropout_final: .0
-  dropout_hidden: .0
   max_epochs: 100
-  batchNorm_final: True
-  batchNorm_hidden: True
   mlp_activation_hidden: relu
   mlp_activation_final: relu
   val_batch_size: 1024
   accum_grad: 1
+  lr_factor: .7
   repeat: 1
   batch_size: 1
-  learnable_embedding: True
   optim_type: Adam
-  mlp_init: ~
-  edgefeat_dim: 0
   seed: 0
-  dtype: torch.float32
   take_last: False
+  dtype: torch.float32
+  edgefeat_dim: 0
 Task_specific:
   SW:
-    lifshiz_comp:
-      dim: 1000
-      edgefeat_dim: 0
-      mlp_layers: 0
-      homog_degree_encoding: False
-      concat_self: False
-      in_dim: 10
-      out_dim: 1000
-      dtype: torch.float64
-      
     Ring:
       batch_size: 5
-      dim: 64
-      lr_factor: .7
-      num_samples: 5
       mlp_layers: 3
       mlp_activation_hidden: lrelu
       mlp_activation_final: lrelu
@@ -53,88 +31,65 @@ Task_specific:
       num_test_samples: 5
     CliqueRing:
       batch_size: 5
-      accum_grad: 1
-      dim: 64
-      lr_factor: .7
       max_epochs: 200
-      num_samples: 5
       mlp_layers: 3
-      mlp_activation_hidden: leaky
-      mlp_activation_final: leaky
+      mlp_activation_hidden: lrelu
+      mlp_activation_final: lrelu
       num_train_samples: 5
       num_test_samples: 5
+      use_residual: False
+      use_layer_norm: False
     CrossRing:
       batch_size: 5
-      dim: 64
       lr_factor: .9
-      num_samples: 5
       mlp_layers: 3
       max_epochs: 200
-      mlp_activation_hidden: leaky
-      mlp_activation_final: leaky
+      mlp_activation_hidden: lrelu
+      mlp_activation_final: lrelu
       num_train_samples: 5
       num_test_samples: 5
+      use_residual: False
+      use_layer_norm: False
     Tree:
       train_fraction: 0.8
       lr_factor: 0.9
-      self_loop_weight: 0.0
       mlp_layers: 0
       max_epochs: 500
-      dim: 64
+      train_fraction: 0.8
       mlp_activation_hidden: relu
       mlp_activation_final: relu
-      lr: 0.001
-      use_residual: True
-      use_layer_norm: True
+      num_train_samples: 32000
+      num_test_samples: 1000
     Cora:
       dim: 128
-      lr_factor: .7
       mlp_layers: 3
       wd: 0.00001
-      dropout_final: .25
-      dropout_hidden: .25
-      lr: 0.001 
+      dropout_final: .15
+      dropout_hidden: .15
+      lr: 0.005
       max_epochs: 80
-      self_loop_weight: 0.1
+      self_loop_weight: 0.15
       optim_type: AdamW
-      use_residual: True
-      use_layer_norm: True
       eval_every: 5
+      mlp_init: xavier_normal
     MUTAG:
       dim: 128
       edgefeat_dim: 128
       lr_factor: .9
       mlp_layers: 3
-      batch_size: 8
+      batch_size: 16
       wd: 0.0001
       dropout_final: .1
       dropout_hidden: .1
-      lr: 0.0005
+      lr: 0.001
       max_epochs: 80
       optim_type: AdamW
       use_residual: True
       use_layer_norm: True
       eval_every: 5
       seed: 15
-      take_last: True
-    PROTEIN:
-      dim: 128
-      edgefeat_dim: 0
-      lr_factor: .9
-      mlp_layers: 3
-      batch_size: 4
-      wd: 0.0001
-      dropout_final: .1
-      dropout_hidden: .1
-      lr: 0.001
-      max_epochs: 100
-      optim_type: AdamW
-      use_residual: True
-      use_layer_nrm: True
-      eval_every: 5
     Actor:
       dim: 128
-      lr_factor: .7
       mlp_layers: 3
       wd: 0.00001
       dropout_final: .1
@@ -143,28 +98,21 @@ Task_specific:
       max_epochs: 80
       self_loop_weight: 0.1
       optim_type: AdamW
-      use_residual: True
-      use_layer_norm: True
-      seed: 1
+      seed: 13
     Squi:
       dim: 128
-      lr_factor: .7
-      mlp_layers: 0
-      use_residual: True
-      use_layer_norm: True
+      mlp_layers: 3
       wd: 0.00001
       lr: 0.001
       max_epochs: 80
-      dropout_final: 0.1
-      dropout_hidden: 0.1
-      self_loop_weight: 0.2
+      dropout_final: 0.2
+      dropout_hidden: 0.2
+      self_loop_weight: 0.15
       optim_type: AdamW
+      seed: 0
     Texas:
       dim: 128
-      lr_factor: .7
       mlp_layers: 3
-      use_residual: True
-      use_layer_norm: True
       wd: 0.00001
       dropout_final: .25
       dropout_hidden: .25
@@ -175,175 +123,62 @@ Task_specific:
       seed: 29
     Corn:
       dim: 128
-      lr_factor: .7
-      mlp_layers: 0
-      wd: 0.00001
-      dropout_final: .1
-      dropout_hidden: .1
-      lr: 0.001
-      max_epochs: 80
-      eval_every: 5
-      self_loop_weight: 0.1
-      optim_type: Adam
-      use_residual: True
-      use_layer_norm: True
-    Wisc:
-      dim: 128
-      lr_factor: .7
-      mlp_layers: 0
-      wd: 0.00001
-      dropout_final: .1
-      dropout_hidden: .1
-      lr: 0.001
-      max_epochs: 70
-      self_loop_weight: 0.1
-      optim_type: Adam
-      eval_every: 5
-      use_residual: True
-      use_layer_norm: True
-    Cham:
-      dim: 128
-      lr_factor: .7
-      mlp_layers: 0
-      residual: True
-      layer_norm: True
-      wd: 0.00001
-      dropout_final: .1
-      dropout_hidden: .1
-      lr: 0.001
-      max_epochs: 80
-      self_loop_weight: 0.1
-      optim_type: AdamW
-    Cite:
-      dim: 128
-      lr_factor: .7
-      mlp_layers: 0
-      use_residual: True
-      use_layer_norm: True
+      mlp_layers: 3
       wd: 0.00001
       dropout_final: .2
       dropout_hidden: .2
-      lr: 0.001
-      max_epochs: 70
-      self_loop_weight: 0.5
+      lr: 0.005
+      max_epochs: 80
+      eval_every: 5
+      self_loop_weight: 0.15
       optim_type: AdamW
-    Pubm:
+      seed: 48
+    Wisc:
       dim: 128
-      lr_factor: .7
-      mlp_layers: 0
+      mlp_layers: 3
+      wd: 0.00001
+      dropout_final: .25
+      dropout_hidden: .25
+      lr: 0.005
+      max_epochs: 70
+      self_loop_weight: 0.1
+      optim_type: Adam
+      eval_every: 5
+      seed: 36
+    Cham:
+      dim: 128
+      mlp_layers: 3
       residual: True
       layer_norm: True
       wd: 0.00001
-      dropout_final: .1
-      dropout_hidden: .1
+      dropout_final: .2
+      dropout_hidden: .2
       lr: 0.005
       max_epochs: 80
       self_loop_weight: 0.1
-      optim_type: Adam
-  GCN: 
-    lifshiz_comp:
-      dim: 200
-      in_dim: 10
-      out_dim: 200
-      dtype: torch.float64
-  GAT: 
-    lifshiz_comp:
-      dim: 200
-      in_dim: 10
-      out_dim: 200
-      dtype: torch.float64
-  GIN: 
-    lifshiz_comp:
-      dim: 100
-      in_dim: 10
-      out_dim: 100
-      dtype: torch.float64
-  Sort:
-    lifshiz_comp:
-      dim: 200
-      in_dim: 10
-      out_dim: 200
-      dtype: torch.float64
-    Ring:
-      batch_size: 5
-      lr_factor: .7
-      num_train_samples: 5
-      num_test_samples: 5
-      lr: 0.001
       optim_type: AdamW
-      max_epochs: 100
-    CrossRing:
-      batch_size: 5
-      lr_factor: .7
-      num_train_samples: 5
-      num_test_samples: 5
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 100
-    CliqueRing:
-      batch_size: 5
-      lr_factor: .7
-      max_epochs: 100
-      num_train_samples: 5
-      num_test_samples: 5
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 100
-    Tree:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 500
-    Cora:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 500
-      wd: 0.00001
-    Corn:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 500
-      wd: 0.00001
-    Actor:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 500
-      wd: 0.00001
+      seed: 0
     Cite:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 500
+      dim: 128
+      mlp_layers: 3
       wd: 0.00001
-    Squi:
-      lr_factor: .7
-      lr: 0.001
+      dropout_final: .2
+      dropout_hidden: .2
+      lr: 0.005
+      max_epochs: 80
+      self_loop_weight: 0.1
       optim_type: AdamW
-      max_epochs: 500
-      wd: 0.00001
-    Texas:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 500
-      wd: 0.00001
-    Wisc:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 500
-      wd: 0.00001
-    Cham:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
-      max_epochs: 500
-      wd: 0.00001
+      seed: 48
     Pubm:
-      lr_factor: .7
-      lr: 0.001
-      optim_type: AdamW
+      dim: 128
+      mlp_layers: 3
       wd: 0.00001
+      dropout_final: .2
+      dropout_hidden: .2
+      lr: 0.005
+      max_epochs: 80
+      self_loop_weight: 0.15
+      optim_type: AdamW
+      eval_every: 5
+      mlp_init: xavier_normal
+      seed: 3
