--- a/bottleneck/configs/task_config.yaml
+++ b/bottleneck/configs/task_config.yaml
@@ -9,14 +9,11 @@ Common:
   max_epochs: 100
   mlp_activation_hidden: relu
   mlp_activation_final: relu
-<<<<<<< HEAD
   val_batch_size: 1024
-=======
-  val_batch_size: 1
->>>>>>> add_batched
   accum_grad: 1
   lr_factor: .7
   repeat: 1
+  batch_size: 1
   optim_type: Adam
   seed: 0
   take_last: False
@@ -29,62 +26,6 @@ Task_specific:
       mlp_layers: 3
       mlp_activation_hidden: lrelu
       mlp_activation_final: lrelu
-<<<<<<< HEAD
-=======
-      max_epochs: 100
-      num_train_samples: 5
-      num_test_samples: 5
-      use_residual: False
-      use_layer_norm: False
-      lr_factor: .9
-    one_radius:
-       batch_size: 128
-       mlp_layers: 3 # 0/3
-       mlp_activation_hidden: lrelu
-       mlp_activation_final: lrelu
-       max_epochs: 200
-       self_loop_weight: 0.2
-       lr_factor: .9
-       mlp_init: ~
-       num_train_samples: 10000
-       num_test_samples: 1000
-    two_radius:
-       batch_size: 128
-       mlp_layers: 3 # 0/3
-       mlp_activation_hidden: lrelu
-       mlp_activation_final: lrelu
-       max_epochs: 200
-       self_loop_weight: 0.2
-       lr_factor: .9
-       mlp_init: ~
-       num_train_samples: 10000
-       num_test_samples: 10
-    TwoCycles:
-      batch_size: 5
-      mlp_layers: 3
-      mlp_activation_hidden: lrelu
-      mlp_activation_final: lrelu
-      max_epochs: 200
-      num_train_samples: 5
-      num_test_samples: 5
-      use_residual: False
-      use_layer_norm: False
-    Path:
-      batch_size: 5
-      mlp_layers: 3
-      mlp_activation_hidden: lrelu
-      mlp_activation_final: lrelu
-      max_epochs: 200
-      num_train_samples: 5
-      num_test_samples: 5
-      use_residual: False
-      use_layer_norm: False
-    KPaths:
-      batch_size: 5
-      mlp_layers: 3
-      mlp_activation_hidden: lrelu
-      mlp_activation_final: lrelu
->>>>>>> add_batched
       max_epochs: 200
       num_train_samples: 5
       num_test_samples: 5
@@ -124,22 +65,177 @@ Task_specific:
       num_test_samples: 1000
       use_residual: False
       use_layer_norm: False
+    Cora:
+      dim: 128
+      mlp_layers: 3
+      wd: 0.00001
+      dropout_final: .15
+      dropout_hidden: .15
+      lr: 0.005
+      max_epochs: 80
+      self_loop_weight: 0.15
+      optim_type: AdamW
+      eval_every: 5
+      mlp_init: xavier_normal
+      use_residual: False
+      use_layer_norm: False
+    MUTAG:
+      dim: 128
+      edgefeat_dim: 128
+      lr_factor: .9
+      mlp_layers: 3
+      batch_size: 16
+      wd: 0.00005
+      dropout_final: .1
+      dropout_hidden: .1
+      lr: 0.001
+      max_epochs: 80
+      optim_type: AdamW
+      use_residual: True
+      use_layer_norm: True
+      eval_every: 5
+      seed: 4
+      take_last: False
+    Protein:
+      dim: 128
+      edgefeat_dim: 0
+      lr_factor: .9
+      mlp_layers: 3                  
+      batch_size: 32
+      wd: 0.00005
+      dropout_final: .1
+      dropout_hidden: .1
+      lr: 0.001
+      max_epochs: 80
+      optim_type: AdamW
+      use_residual: True
+      use_layer_norm: True
+      eval_every: 5
+      seed: 0
+      take_last: False
+    Actor:
+      dim: 128
+      mlp_layers: 3
+      wd: 0.00001
+      dropout_final: .1
+      dropout_hidden: .1
+      lr: 0.005
+      max_epochs: 80
+      self_loop_weight: 0.1
+      optim_type: AdamW
+      seed: 13
+    Squi:
+      dim: 128
+      mlp_layers: 3
+      wd: 0.00001
+      lr: 0.001
+      max_epochs: 80
+      dropout_final: 0.2
+      dropout_hidden: 0.2
+      self_loop_weight: 0.15
+      optim_type: AdamW
+      seed: 0
+    Texas:
+      dim: 128
+      mlp_layers: 3
+      wd: 0.00001
+      dropout_final: .25
+      dropout_hidden: .25
+      lr: 0.001
+      max_epochs: 50
+      self_loop_weight: 0.1
+      optim_type: AdamW
+      seed: 29
+    Corn:
+      dim: 128
+      mlp_layers: 3
+      wd: 0.00001
+      dropout_final: .2
+      dropout_hidden: .2
+      lr: 0.005
+      max_epochs: 80
+      eval_every: 5
+      self_loop_weight: 0.15
+      optim_type: AdamW
+      seed: 48
+    Wisc:
+      dim: 128
+      mlp_layers: 3
+      wd: 0.00001
+      dropout_final: .25
+      dropout_hidden: .25
+      lr: 0.005
+      max_epochs: 70
+      self_loop_weight: 0.1
+      optim_type: Adam
+      eval_every: 5
+      seed: 36
+    Cham:
+      dim: 128
+      mlp_layers: 3
+      residual: True
+      layer_norm: True
+      wd: 0.00001
+      dropout_final: .2
+      dropout_hidden: .2
+      lr: 0.005
+      max_epochs: 80
+      self_loop_weight: 0.1
+      optim_type: AdamW
+      seed: 0
+    Cite:
+      dim: 128
+      mlp_layers: 3
+      wd: 0.00001
+      dropout_final: .2
+      dropout_hidden: .2
+      lr: 0.005
+      max_epochs: 80
+      self_loop_weight: 0.1
+      optim_type: AdamW
+      seed: 48
+    Pubm:
+      dim: 128
+      mlp_layers: 3
+      wd: 0.00001
+      dropout_final: .2
+      dropout_hidden: .2
+      lr: 0.005
+      max_epochs: 80
+      self_loop_weight: 0.15
+      optim_type: AdamW
+      eval_every: 5
+      mlp_init: xavier_normal
+      seed: 3
   GAT: 
+    MUTAG:
+      dim: 128
+      edgefeat_dim: 128
+      lr_factor: .9
+      mlp_layers: 3
+      batch_size: 16
+      wd: 0.0001
+      dropout_final: .1
+      dropout_hidden: .1
+      lr: 0.001
+      max_epochs: 80
+      optim_type: AdamW
+      use_residual: True
+      use_layer_norm: True
+      eval_every: 5
+      seed: 15
+      take_last: True
     Ring:
       dim: 64
       lr_factor: .9
-      batch_size: 5
+      mlp_layers: 3
+      batch_size: 16
       wd: 0.0
-<<<<<<< HEAD
       lr: 0.001
       max_epochs: 80
-=======
-      lr: 0.005
-      max_epochs: 100
->>>>>>> add_batched
       optim_type: AdamW
-      use_residual: False
-      use_layer_norm: False
+      use_residual: True
+      use_layer_norm: True
       eval_every: 5
       num_train_samples: 5
       num_test_samples: 5
@@ -164,115 +260,9 @@ Task_specific:
     Ring:
       dim: 64
       lr_factor: .7
-      batch_size: 5
-      wd: 0.0
-<<<<<<< HEAD
-      lr: 0.001
-      max_epochs: 80
-=======
-      lr: 0.005
-      max_epochs: 200
->>>>>>> add_batched
-      optim_type: AdamW
-      use_residual: False
-      use_layer_norm: False
-      eval_every: 5
-      num_train_samples: 5
-      num_test_samples: 5
-<<<<<<< HEAD
-
-=======
-      val_batch_size: 5
-    two_radius:
-       batch_size: 128
-       mlp_activation_hidden: lrelu
-       mlp_activation_final: lrelu
-       max_epochs: 200
-       self_loop_weight: 0.2
-       lr_factor: .9
-       mlp_init: ~
-       num_train_samples: 10000
-       num_test_samples: 1000
-    one_radius:
-      batch_size: 128
-      mlp_layers: 3 # 0/3
-      mlp_activation_hidden: lrelu
-      mlp_activation_final: lrelu
-      max_epochs: 100
-      self_loop_weight: 0.2
-      lr_factor: .9
-      mlp_init: ~
-      num_train_samples: 10000
-      num_test_samples: 100
->>>>>>> add_batched
-  GCN: 
-    Ring:
-      dim: 64
-      lr_factor: .7
-      batch_size: 5
-      wd: 0.0
-<<<<<<< HEAD
-      lr: 0.001
-      max_epochs: 80
-=======
-      lr: 0.005
-      max_epochs: 200
->>>>>>> add_batched
-      optim_type: AdamW
-      use_residual: False
-      use_layer_norm: False
-      eval_every: 5
-      num_train_samples: 5
-      num_test_samples: 5
-  GGNN: 
-<<<<<<< HEAD
-    MUTAG:
-      dim: 128
-      edgefeat_dim: 128
-      lr_factor: .9
-=======
-    two_radius:
-       batch_size: 128
-       max_epochs: 200            
-       lr_factor: .9
-       num_train_samples: 10000
-       num_test_samples: 1000
-    Ring:
-      dim: 64
-      lr_factor: .7
->>>>>>> add_batched
       mlp_layers: 3
       batch_size: 5
       wd: 0.0
-      lr: 0.005
-      max_epochs: 80
-      optim_type: AdamW
-      use_residual: False
-      use_layer_norm: False
-      eval_every: 5
-      num_train_samples: 5
-      num_test_samples: 5
-  SAGE: 
-    Ring:
-      dim: 64
-      lr_factor: .7
-      mlp_layers: 3
-      batch_size: 5
-      wd: 0.0
-      lr: 0.005
-      max_epochs: 80
-      optim_type: AdamW
-      use_residual: False
-      use_layer_norm: False
-      eval_every: 5
-      num_train_samples: 5
-      num_test_samples: 5
-  Transformer: 
-    Ring:
-      dim: 64
-      lr_factor: .9
-      mlp_layers: 3
-      batch_size: 16
       lr: 0.001
       max_epochs: 80
       optim_type: AdamW
@@ -281,14 +271,100 @@ Task_specific:
       eval_every: 5
       num_train_samples: 5
       num_test_samples: 5
-    one_radius:
-      batch_size: 128
-      mlp_layers: 3 # 0/3
-      mlp_activation_hidden: lrelu
-      mlp_activation_final: lrelu
-      max_epochs: 5
-      self_loop_weight: 0.2
+
+  GCN: 
+    Ring:
+      dim: 64
+      lr_factor: .7
+      mlp_layers: 3
+      batch_size: 5
+      wd: 0.0
+      lr: 0.001
+      max_epochs: 80
+      optim_type: AdamW
+      use_residual: True
+      use_layer_norm: True
+      eval_every: 5
+      num_train_samples: 5
+      num_test_samples: 5
+    MUTAG:
+      dim: 128
+      edgefeat_dim: 128
       lr_factor: .9
-      mlp_init: ~
-      num_train_samples: 10000
-      num_test_samples: 100
+      mlp_layers: 3
+      batch_size: 16
+      wd: 0.0001
+      dropout_final: .1
+      dropout_hidden: .1
+      lr: 0.001
+      max_epochs: 80
+      optim_type: AdamW
+      use_residual: True
+      use_layer_norm: True
+      eval_every: 5
+      seed: 15
+      take_last: True
+  GGNN: 
+    MUTAG:
+      dim: 128
+      edgefeat_dim: 128
+      lr_factor: .9
+      mlp_layers: 3
+      batch_size: 16
+      wd: 0.0001
+      dropout_final: .1
+      dropout_hidden: .1
+      lr: 0.001
+      max_epochs: 80
+      optim_type: AdamW
+      use_residual: True
+      use_layer_norm: True
+      eval_every: 5
+      seed: 15
+      take_last: True
+  SAGE: 
+    Ring:
+      dim: 64
+      lr_factor: .7
+      mlp_layers: 3
+      batch_size: 5
+      wd: 0.0
+      lr: 0.001
+      max_epochs: 80
+      optim_type: AdamW
+      use_residual: True
+      use_layer_norm: True
+      eval_every: 5
+      num_train_samples: 5
+      num_test_samples: 5
+    MUTAG:
+      dim: 128
+      edgefeat_dim: 128
+      lr_factor: .9
+      mlp_layers: 3
+      batch_size: 16
+      wd: 0.0001
+      dropout_final: .1
+      dropout_hidden: .1
+      lr: 0.001
+      max_epochs: 80
+      optim_type: AdamW
+      use_residual: True
+      use_layer_norm: True
+      eval_every: 5
+      seed: 15
+      take_last: True
+  Transformer: 
+      Ring:
+        dim: 64
+        lr_factor: .9
+        mlp_layers: 3
+        batch_size: 16
+        lr: 0.001
+        max_epochs: 80
+        optim_type: AdamW
+        use_residual: True
+        use_layer_norm: True
+        eval_every: 5
+        num_train_samples: 5
+        num_test_samples: 5
